syntax = "proto3";

message File {
    string file_name = 1;
    uint64 timestamp = 2;
    string signature = 3;
}

message Block {
    string file_name = 1;
    uint64 offset = 2;
    uint32 size = 3;
}
